--- a/Contactus.html
+++ b/Contactus.html
@@ -13,12 +13,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body>
+    <section>
       <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand " href="index.html">LaImperial</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+    <div class="container-fluid ">
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
@@ -27,6 +24,10 @@
           <li class="nav-item">
             <a class="nav-link" href="#">Link</a>
           </li>
+          <a class="navbar-brand" href="index.html">LaImperial</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+          </button>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Products    
@@ -49,6 +50,39 @@
       </div>
     </div>
   </nav>
+</section>
+<section>
+  <nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+      <li class="breadcrumb-item active" aria-current="page">Contact Us</li>
+    </ol>
+  </nav>
+  
+</section>
+<section>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-12">
+        <div class="contact container">
+        <h1 class="ctu-title">Contact Us</h1>
+        <div class="ctu-inner">
+          <div class="ctu-support">
+            <p>
+              <strong>LAIMPERIAL SUPPORT AND INFORMATION CENTER</strong>
+            </p>
+            <p>Get all the exclusive information about our products, warranty and services by clicking below.</p>
+            <a class="btn btn-light" href="Faq.html" title="Click Here">
+              <span>Click Here</span>
+          </a>
+          </div>
+        </div>
+
+      </div>
+      </div>
+    </div>
+  </div>
+</section>
   <section>
   <div class="container-fluid">
     <div class="row bg-light">
