--- a/index.html
+++ b/index.html
@@ -13,9 +13,16 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body>
+    <section>
+      <div class="text-center">
+        <span>
+          <a class="top1" href="index.html"> Welcome To LaImperial</a>
+        </span>
+      </div>
+    </div>
       <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand " href="index.html">LaImperial</a>
+      <a class="navbar-brand" href="index.html">LaImperial</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -49,7 +56,15 @@
       </div>
     </div>
   </nav>
-  <section >
+  </section>
+  <section>
+    <nav aria-label="breadcrumb">
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item active" aria-current="page">Home</li>
+      </ol>
+    </nav>
+  </section>
+  <section>
   <div class="container-fluid">
     <div class="row bg-light">
     
