--- a/Contactus.html
+++ b/Contactus.html
@@ -13,76 +13,85 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body>
-    <section>
-      <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid ">
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
-          <a class="navbar-brand" href="index.html">LaImperial</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-          </button>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Products    
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="#">fridge</a></li>
-              <li><a class="dropdown-item" href="#">microwave</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">iron</a></li>
-            </ul>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-          </li>
-        </ul>
-        <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
-      </div>
-    </div>
-  </nav>
-</section>
-<section>
-  <nav aria-label="breadcrumb">
-    <ol class="breadcrumb">
-      <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-      <li class="breadcrumb-item active" aria-current="page">Contact Us</li>
-    </ol>
-  </nav>
-  
-</section>
-<section>
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-12">
-        <div class="contact container">
-        <h1 class="ctu-title">Contact Us</h1>
-        <div class="ctu-inner">
-          <div class="ctu-support">
-            <p>
-              <strong>LAIMPERIAL SUPPORT AND INFORMATION CENTER</strong>
-            </p>
-            <p>Get all the exclusive information about our products, warranty and services by clicking below.</p>
-            <a class="btn btn-light" href="Faq.html" title="Click Here">
-              <span>Click Here</span>
+    <nav class="navbar ">
+      <div class="left left-bars">
+        <div class="container">
+          <a class="navbar-brand" href="index.html">
+            <img src="images/8480075711_8d2a7a35-f43c-4751-8c79-7a68834d763c.png" alt="Test Image">
           </a>
+        </div>
+        <div class="dropdown">
+          <button class="dropbtn">Shop</button>
+          <div class="dropdown-content">
+            <div class="dropdown-content">
+              <div class="row">
+                <div class="column">
+                  <h5>Offers</h5>
+                  <a href="#">Link 1</a>
+                  <a href="#">Link 2</a>
+                  <a href="#">Link 3</a>
+                  <a href="#">Link 1</a>
+                  <a href="#">Link 2</a>
+                  <a href="#">Link 3</a>
+                </div>
+  
+  
+  
+  
+              </div>
+            </div>
           </div>
         </div>
-
-      </div>
-      </div>
-    </div>
-  </div>
-</section>
+        <div class="dropdown">
+          <button class="dropbtn">Mobile</button>
+          <div class="dropdown-content">
+            <a href="#">Link 1</a>
+            <a href="#">Link 2</a>
+            <a href="#">Link 3</a>
+  
+          </div>
+        </div>
+        <div class="dropdown">
+          <button class="dropbtn">TV & AV</button>
+          <div class="dropdown-content">
+            <a href="#">Link 1</a>
+            <a href="#">Link 2</a>
+            <a href="#">Link 3</a>
+          </div>
+        </div>
+        <div class="dropdown">
+          <button class="dropbtn">Home Appliance</button>
+          <div class="dropdown-content">
+            <a href="#">Link 1</a>
+            <a href="#">Link 2</a>
+            <a href="#">Link 3</a>
+          </div>
+        </div>
+        <div class="dropdown">
+          <button class="dropbtn">IT</button>
+          <div class="dropdown-content">
+            <a href="#">Link 1</a>
+            <a href="#">Link 2</a>
+            <a href="#">Link 3</a>
+          </div>
+        </div>
+      <div class="right right-bars">
+        <div class="dropdown">
+          <a href="Contactus.html" class="dropbtn" type="button">Contact Us</a>
+        </div>
+        <a href="#"><i class="fa fa-search"></i></a>
+        <a href="#"><i class="fa fa-cart-shopping"></i></a>
+        <a href="#"><i class="fa-solid fa-user"></i></a>
+        </div>
+    </nav>
+    <section>
+    <nav aria-label="breadcrumb">
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+        <li class="breadcrumb-item active" aria-current="page">Contact Us</li>
+      </ol>
+    </nav>
+  </section>
   <section>
   <div class="container-fluid">
     <div class="row bg-light">
