--- a/Contactus.html
+++ b/Contactus.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body>
-    <nav class="navbar ">
+    <nav class="navbar navbar-brand">
       <div class="left left-bars">
         <div class="container">
           <a class="navbar-brand" href="index.html">
@@ -75,14 +75,12 @@
             <a href="#">Link 3</a>
           </div>
         </div>
-      <div class="right right-bars">
         <div class="dropdown">
           <a href="Contactus.html" class="dropbtn" type="button">Contact Us</a>
         </div>
         <a href="#"><i class="fa fa-search"></i></a>
         <a href="#"><i class="fa fa-cart-shopping"></i></a>
         <a href="#"><i class="fa-solid fa-user"></i></a>
-        </div>
     </nav>
     <section>
     <nav aria-label="breadcrumb">
