--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -20,7 +21,7 @@
 </head>
 
 <body>
-  <nav class="navbar ">
+  <nav class="navbar navbar-brand">
     <div class="left left-bars">
       <div class="container">
         <a class="navbar-brand" href="index.html">
@@ -82,14 +83,12 @@
           <a href="#">Link 3</a>
         </div>
       </div>
-    <div class="right right-bars">
       <div class="dropdown">
         <a href="Contactus.html" class="dropbtn" type="button">Contact Us</a>
       </div>
       <a href="#"><i class="fa fa-search"></i></a>
       <a href="#"><i class="fa fa-cart-shopping"></i></a>
       <a href="#"><i class="fa-solid fa-user"></i></a>
-      </div>
   </nav>
 
   <section>
@@ -99,17 +98,20 @@
       </ol>
     </nav>
   </section>
-  
+
   <section class="content d-flex justify-content-center">
     <div id="carouselExampleIndicators" class="carousel slide">
       <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+          aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+          aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+          aria-label="Slide 3"></button>
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="images/Home-kv2-1440x640-green.webp"  alt="...">
+          <img src="images/Home-kv2-1440x640-green.webp" alt="...">
           <button type="button" class="btn btn-primary byn">Read More</button>
         </div>
         <div class="carousel-item">
@@ -121,19 +123,80 @@
           <button type="button" class="btn btn-primary byn">Read More</button>
         </div>
       </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+        data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Previous</span>
       </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+        data-bs-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
       </button>
     </div>
   </section>
   <section>
-    <div class="container">
+    <div class="container text-center">
       <h1 class="text-center">Latest Deals</h1>
+      <div class="row">
+        <div class="col-3">
+          <div class="card" style="width: 250px;">
+            <img src="images/Man-s-hair-250x250-9030.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Dawlance Men's Trimmer Zeus DWMC 9030</h5>
+              <p class="card-text">Dawlance Men Grooming Trimmer.</p>
+            </div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">8,100 PKR Only</li>
+            </ul>
+            <div class="card-body">
+            </div>
+          </div>
+        </div>
+        <div class="col-3">
+          <div class="card" style="width: 100x;">
+            <img src="images/TDA2651GB.webp" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">
+                Bosch GARMENT STEAMER</h5>
+              <p class="card-text">Steam Iron 2400W</p>
+            </div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">₨12,900</li>
+            <div class="card-body">
+            </div>
+          </div>
+        </div>
+        <div class="col-3">
+          <div class="card" style="width: 250px">
+            <img src="/images/w1.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">DW 270 LVS+ Dawlance Fully Automatic Washing Machine</h5>
+              <p class="card-text">Wash Heavy loads without worrying about voltage fluctuation. Dawlance LVS series brings a smarter option to the shelf so that electricity problem don’t get in the way of neat and clean clothes.</p>
+            </div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">RS 102,000</li>
+            </ul>
+            <div class="card-body">
+            </div>
+          </div>
+        </div>
+        <div class="col-3">
+          <div class="card" style="width:250px">
+            <img src="images/image (2).webp" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Dawlance Air Conditioner Mega T+ 10 DC Inverter 0.75 Ton / Split AC / Cool Only / 8000 BTU</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">Rs 101,000</li>
+            </ul>
+            <div class="card-body">
+            </div>
+          </div>
+        </div>
+        
+      </div>
     </div>
   </section>
   <div class="container-fluid">
