--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             <img src="/images/w1.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">DW 270 LVS+ Dawlance Fully Automatic Washing Machine</h5>
-              <p class="card-text">Wash Heavy loads without worrying about voltage fluctuation. Dawlance LVS series brings a smarter option to the shelf so that electricity problem don’t get in the way of neat and clean clothes.</p>
+              <p class="card-text"></p>
             </div>
             <ul class="list-group list-group-flush">
               <li class="list-group-item">RS 102,000</li>
@@ -186,7 +186,7 @@
             <img src="images/image (2).webp" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Dawlance Air Conditioner Mega T+ 10 DC Inverter 0.75 Ton / Split AC / Cool Only / 8000 BTU</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text"></p>
             </div>
             <ul class="list-group list-group-flush">
               <li class="list-group-item">Rs 101,000</li>
