--- a/index.html
+++ b/index.html
@@ -22,51 +22,12 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container">
-      <a class="navbar-brand" href="index.html"><img src="images/8480075711_8d2a7a35-f43c-4751-8c79-7a68834d763c.png" alt=""></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="Product.html">Product</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="Product.html">Shop</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="Contactus.html">Contact</a>
-          </li>
-        </ul>
-        <a href="#" data-bs-toggle="modal" data-bs-target="#searchModal"><i class="fa fa-search"></i></a>
-
-        <!-- Modal -->
-        <div class="modal fade" id="searchModal" tabindex="-1" aria-labelledby="searchModalLabel" aria-hidden="true">
-          <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h5 class="modal-title" id="searchModalLabel">Search</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-              </div>
-              <div class="modal-body">
-                <form class="d-flex">
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-success" type="submit"><i class="fa fa-search"></i></button>
-                </form>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </nav>
-
+  <div id="navi"></div>
+  <script>
+    $.get('nav.html',function(response){
+      $("#navi").html(response)
+    })
+  </script>
 
 
   <section>
@@ -101,45 +62,13 @@
       </div>
     </div>
   </section>
-  <div class="container-fluid">
-    <div class="row bg-light">
+  <div id="footer"></div>
+  <script>
+      $.get('footer.html', function (response) {
+          $("#footer").html(response)
+      })
+  </script>
 
-      <footer class="container-fluid bg-dark text-end text-white">
-        <!-- Grid container -->
-        <div class="container p-4 pb-0">
-          <!-- Section: Social media -->
-          <section class="mb-4">
-            <!-- Facebook -->
-            <a class="btn btn-outline-light btn-floating m-1" href="#" role="button"><i
-                class="fab fa-facebook-f"></i></a>
-
-            <!-- Twitter -->
-            <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fab fa-twitter"></i></a>
-
-            <!-- Google -->
-            <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fab fa-google"></i></a>
-
-            <!-- Instagram -->
-            <a class="btn btn-outline-light btn-floating m-1" href="#" role="button"><i
-                class="fab fa-instagram"></i></a>
-
-            <!-- Linkedin -->
-            <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
-                class="fab fa-linkedin-in"></i></a>
-
-          </section>
-          <!-- Section: Social media -->
-        </div>
-        <!-- Grid container -->
-
-        <!-- Copyright -->
-        <section class="">
-          <a class="text-danger  copyright" href="index.html" role="button">© Copyright LaImperial 2023</a><br>
-          <a class="text-danger  copyright" href="Contactus.html">Contact Us</a>
-    </div>
-    </section>
-
-    </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-element-bundle.min.js"></script>
     <script src="js/variable.js"></script>
     <script>
@@ -151,7 +80,7 @@
             <div class="card-body p-4 d-flex flex-column"> <!-- Add d-flex and flex-column classes -->
               <img src="${i.imgsrc}" class="card-img-top mb-3" alt="" class="img-fluid d-block mx-auto">
               <h5><a href="#" class="text-dark">${i.name}</a></h5>
-              <p class="small text-muted font-italic">${i.desc}</p>
+              <a href="productDetail.html?id=${i.id}"><i class="fas fa-eye"></i></a>
               <ul class="list-inline small">
                 <li class="list-inline-item m-0"><i class="fa fa-star text-success"></i></li>
                 <li class="list-inline-item m-0"><i class="fa fa-star text-success"></i></li>
@@ -160,7 +89,8 @@
                 <li class="list-inline-item m-0"><i class="fa fa-star-o text-success"></i></li>
               </ul>
               <h5><a href="#" class="text-dark">${i.price}</a></h5>
-              <a href="Product.html" class="btn btn-primary mt-auto" type="button">Buy Now</a> 
+              <a class="btn btn-primary"href="productDetail.html?id=${i.id}"><i class="fas fa-shopping-cart"> Buy Now</i></a>
+
             </div>
           </div>
         </div>
@@ -174,7 +104,7 @@
             <div class="card-body p-4 d-flex flex-column"> <!-- Add d-flex and flex-column classes -->
               <img src="${i.imgsrc}" class="card-img-top mb-3" alt="" class="img-fluid d-block mx-auto">
               <h5><a href="#" class="text-dark">${i.name}</a></h5>
-              <p class="small text-muted font-italic">${i.desc}</p>
+              <a href="productDetail.html?id=${i.id}"><i class="fas fa-eye"></i></a>
               <ul class="list-inline small">
                 <li class="list-inline-item m-0"><i class="fa fa-star text-success"></i></li>
                 <li class="list-inline-item m-0"><i class="fa fa-star text-success"></i></li>
@@ -183,7 +113,7 @@
                 <li class="list-inline-item m-0"><i class="fa fa-star-o text-success"></i></li>
               </ul>
               <h5><a href="#" class="text-dark">${i.price}</a></h5>
-              <a href="Product.html" class="btn btn-primary mt-auto" type="button">Buy Now</a>
+              <a class="btn btn-primary"href="productDetail.html?id=${i.id}"><i class="fas fa-shopping-cart"> Buy Now</i></a>
             </div>
           </div>
         </div>
