--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <li class="list-inline-item m-0"><i class="fa fa-star-o text-success"></i></li>
               </ul>
               <h5><a href="#" class="text-dark">${i.price}</a></h5>
-              <a class="btn btn-primary"href="productDetail.html?id=${i.id}"><i class="fas fa-shopping-cart"> Buy Now</i></a>
+              <a class="btn btn-primary mt-auto"href="productDetail.html?id=${i.id}"><i class="fas fa-shopping-cart"> Buy Now</i></a>
 
             </div>
           </div>
@@ -113,7 +113,7 @@
                 <li class="list-inline-item m-0"><i class="fa fa-star-o text-success"></i></li>
               </ul>
               <h5><a href="#" class="text-dark">${i.price}</a></h5>
-              <a class="btn btn-primary"href="productDetail.html?id=${i.id}"><i class="fas fa-shopping-cart"> Buy Now</i></a>
+              <a class="btn btn-primary mt-auto"href="productDetail.html?id=${i.id}"><i class="fas fa-shopping-cart"> Buy Now</i></a>
             </div>
           </div>
         </div>
