--- a/productDetail.html
+++ b/productDetail.html
@@ -34,17 +34,26 @@
             <li class="breadcrumb-item active" aria-current="page">Product Details </li>
         </ol>
     </nav>
-    <h1 id="name"></h1>
-    <p id="desc"></p>
-    <img src="" id="img">
-    
+
+
+    <!-- Product card with "Buy Now" and "Compare" buttons -->
+    <div class="card  mb-5 m-auto" style="width: 18rem;">
+        <img src="" class="card-img-top" alt="Product Image" id="img">
+        <div class="card-body text-dark">
+            <h5 class="card-title" id="name"></h5>
+            <p class="card-text" id="desc"></p>
+            <button class="btn btn-primary" onclick="buyNow()">Buy Now</button>
+            <button class="btn btn-secondary" onclick="addToCompare()">Compare</button>
+        </div>
+    </div>
+
     <div id="footer"></div>
     <script>
         $.get('footer.html', function (response) {
             $("#footer").html(response)
         })
     </script>
-  
+
     <script src="js/variable.js"></script>
     <script>
         const urlParams = new URLSearchParams(window.location.search);
@@ -54,7 +63,22 @@
                 document.getElementById('name').innerText = i.name;
                 document.getElementById('desc').innerText = i.desc;
                 document.getElementById('img').src = i.imgsrc;
+                // Set product details in the card
+                document.getElementById('cardName').innerText = i.name;
+                document.getElementById('cardDesc').innerText = i.desc;
+                document.getElementById('cardImg').src = i.imgsrc;
             }
+        }
+        // Function to handle "Buy Now" button click
+        function buyNow() {
+            // Add your logic to handle "Buy Now" functionality here
+            // For example, redirect to a checkout page or show a success message
+        }
+
+        // Function to handle "Compare" button click
+        function addToCompare() {
+            // Add your logic to handle "Compare" functionality here
+            // For example, add the product to the compare list and show a confirmation message
         }
     </script>
 </body>
