--- a/haiderp.html
+++ b/haiderp.html
@@ -34,11 +34,11 @@
     </ol>
   </nav>
   <div class="container text-center">
-    <h1 class="text-center">Appliances </h1>
+    <h1 class="text-center">Haier Products </h1>
     <div class="row g-4" id="row">
 
     </div>
-
+ 
   </div>
   <div id="footer"></div>
   <script>
@@ -51,13 +51,11 @@
   <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-element-bundle.min.js"></script>
   <script src="js/variable.js"></script>
   <script>
-    for (i of all_products) {
+    for (i of haierp) {
       $("#row").append(`
             <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-          <!-- Card-->
-          <div class="card rounded shadow-sm border-1 h-100">
-            <div class="card-body p-4 d-flex flex-column"> <!-- Add d-flex and flex-column classes -->
-              <i class="fa-solid fa-code-compare"></i>
+            <div class="card rounded shadow-sm border-1 h-100">
+            <div class="card-body p-4 d-flex flex-column"> 
               <img src="${i.imgsrc}" class="card-img-top mb-3" alt="" class="img-fluid d-block mx-auto">
               <h5><a href="#" class="text-dark">${i.name}</a></h5>
               <a href="productDetail.html?id=${i.id}"><i class="fas fa-eye"></i></a>
@@ -70,7 +68,6 @@
               </ul>
               <h5><a href="#" class="text-dark">${i.price}</a></h5>
               <a class="btn btn-primary mt-auto"href="productDetail.html?id=${i.id}"><i class="fas fa-shopping-cart"> Buy Now</i></a>
-              <a href="compare.html"><i class="fa-solid fa-code-compare" style="color: #e78a08;"> Compare </i></a>
             </div>
           </div>
         </div>             
