--- a/productDetail.html
+++ b/productDetail.html
@@ -17,6 +17,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
 
 </head>
 
@@ -41,7 +43,7 @@
         <div class="card-body text-dark">
             <h5 class="card-title" id="name"></h5>
             <p class="card-text" id="desc"></p>
-            <a class="btn btn-primary mt-auto"><i class="fas fa-shopping-cart"> Buy Now</i></a>
+            <a class="btn btn-primary mt-auto" onclick="sweetAlert()"><i class="fas fa-shopping-cart" > Buy Now</i></a>
             <a class="btn btn-danger" href="compare.html"><i class="fa-solid fa-code-compare" style="color: #e78a08;"> Compare </i></a>
         </div>
     </div>
@@ -65,6 +67,12 @@
             }
         }
     </script>
+    <script>
+    function sweetAlert() {
+      Swal.fire('Item','Your Item has been added to CART','success');
+      event.preventDefault();
+    }
+  </script>
 </body>
 
 </html>
