--- a/Product.html
+++ b/Product.html
@@ -69,8 +69,11 @@
                 <li class="list-inline-item m-0"><i class="fa fa-star-o text-success"></i></li>
               </ul>
               <h5><a href="#" class="text-dark">${i.price}</a></h5>
-              <a class="btn btn-primary mt-auto"href="productDetail.html?id=${i.id}"><i class="fas fa-shopping-cart"> Buy Now</i></a>
-              <a href="compare.html"><i class="fa-solid fa-code-compare" style="color: #e78a08;"> Compare </i></a>
+              <div class="mt-auto">
+                <a class="btn btn-dark mt-auto "href="productDetail.html?id=${i.id}"><i class="fas fa-shopping-cart"> Buy Now</i>
+                </a>
+              <a href="compare.html"><i class="fa-solid fa-code-compare" style="color: black;"></i></a>
+                </div>
             </div>
           </div>
         </div>             
