--- a/nav.html
+++ b/nav.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="css/navbar.css">
+  <link rel="stylesheet" href="css/style.css">
 
 </head>
 
@@ -14,7 +15,7 @@
   <nav class="navbar navbar-expand-lg navbar-light bg-light  ">
     <div class="container">
       <a class="navbar-brand" href="index.html"><img src="images/8480075711_8d2a7a35-f43c-4751-8c79-7a68834d763c.png"
-          alt=""></a>
+        class="logo"  alt=""></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
